# wgccc-fixtures-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
cricket/: compare.py  cricket.py  cricket_enums.py  fixture.py  fixtureprinter.py
cricket/comparator/: compare_fixture_lists.py
cricket/printer/: fixture_list_type.py  fixture_utils.py  fixtures.py  googlecalendar_utils.py
cricket/reader/: googlecalendar.py  googlecalendar_utils.py  playcricket.py  playcricket_utils.py  spondapi  spondapi.py  utils.py
data/: spond.data
docs/: index.html
reader/: playcricket.py
src/: compare.py  cricket.py  cricket_enums.py  cricket_team.py  fixture.py  fixtureprinter.py
src/comparator/: compare_fixture_lists.py
src/printer/: fixture_list_type.py  fixture_utils.py  fixtureprinter.py  fixtures.py  googlecalendar_utils.py
src/reader/: googlecalendar.py  googlecalendar_utils.py  playcricket.py  playcricket_utils.py  utils.py
tests/: test_cricket_enums.py  test_cricket_team.py  test_fixture.py
tests/comparator/: test_compare_fixture_lists.py
tests/cricket/: test_fixture.py
tests/printer/: test_fixture_utils.py  test_googlecalendar_utils.py  test_print_googlecalendar_utils.py
tests/reader/: test_googlecalendar.py  test_googlecalendar_utils.py  test_playcricket_utils.py  test_read_googlecalendar_utils.py  test_utils.py
tests/wgccc-fixtures-manager/: test_fixture.py
wgccc_fixtures_manager/: fixture.py
